# SandboxGUI

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: desktop_agent.py  mcp_server_demo.py  sandbox_demo.py  utils.py
src/screenenv/: __init__.py  logger.py  mcp_remote_server.py  remote_screen_env.py  response_models.py  retry_decorator.py  sandbox.py  test_sandbox.py
src/screenenv/desktop_agent/: desktop_agent_base.py
src/screenenv/remote_provider/: __init__.py  create_remote_env.py  provider.py
src/screenenv/remote_provider/docker/: provider.py
